--- a/styles.css
+++ b/styles.css
@@ -24,7 +24,7 @@ table, td {
     max-width: 575px;
     text-align: center;
     margin: auto;
-    background-color: orange;
+    /* background-color: orange; */
 }
 
 .logo_space {
@@ -33,7 +33,7 @@ table, td {
     /* height: 92px; */
     position: relative;
     width: 47%;
-    background-color: white;
+    /* background-color: white; */
     margin: auto;
     /* display: flex; */
 }
@@ -48,8 +48,8 @@ table, td {
     right: 0px;
     margin: 0;
     padding-right: 5px;
-    padding-bottom: 5px;
-    color: rgb(0, 145, 255);
+    padding-bottom: 4px;
+    color: rgb(0, 132, 255);
 }
 
 @media (max-width: 575px) {
@@ -80,7 +80,7 @@ table, td {
     max-width: 575px;
     margin: auto;
     text-align: center;
-    background-color: aliceblue;
+    /* background-color: aliceblue; */
     /* border: 1px solid grey; */
 }
 
