--- a/styles.css
+++ b/styles.css
@@ -164,3 +164,150 @@ button {
 #image_search_button {
     visibility: hidden;
 }
+
+/* Advanced Search Page Styling*/
+
+.page {
+    margin: auto;
+}
+
+.header {
+    position: relative;
+    height: 64px;
+    display: flex;
+    /* background-color: aquamarine; */
+}
+
+#logo-advanced-wrapper {
+    position: relative;
+    left: 20px;
+    top: 21px;
+    /* background-color: white; */
+    height: 24.5px;
+}
+
+#logo-advanced {
+    height: 100%;
+}
+
+.header a {
+    position: absolute;
+    right: 25px;
+    top: 20px;
+    text-decoration: none;
+    color: black;
+    font-size: 90%;
+}
+
+.header a:after {
+    text-decoration: none;
+    color: black;
+}
+
+.header a:hover {
+    text-decoration: underline;
+    color: black;
+}
+
+.sub-header {
+    position: relative;
+    height: 72px;
+
+    /* background-color: rgb(255, 249, 182); */
+}
+
+.sub-header p {
+    position: relative;
+    top: 25px;
+    left: 45px;
+    font-size: 20px;
+    color: #d93025;
+    margin: 0;
+}
+
+.separator  {
+    border-bottom: 1px solid #ebebeb;
+}
+
+.form   {
+    max-width: 1140px;
+    min-width: 200px;
+    margin-top: 40px;
+    margin-left: 45px;
+}
+
+.form-row {
+    display: flex;
+    height: 42px;
+    /* background-color: aliceblue; */
+    border-bottom: 1px solid black;
+}
+
+#form-heading-1 {
+    margin: 0;
+    margin-top: -1px;
+    font-size: 16px;
+    color: #333;
+    font-weight: 500;
+}
+
+#form-heading-2 {
+    margin: 0;
+    margin-left: -12px;
+    font-size: 13px;
+    color: #777;
+    font-weight: 700;
+}
+
+.form-col-1 {
+    margin-top: 8px;
+    min-width: 167px;
+    width: 16%;
+    color: #222;
+    font-size: 13px;
+    background-color: lightgoldenrodyellow;
+}
+
+.form-col-2 {
+    min-width: 167px;
+    width: 50%;
+    /* background-color: cornflowerblue; */
+}
+
+.form-col-3 {
+    float: left;
+    display: grid;
+    /* display: table-cell; */
+    align-items: center;
+    /* white-space: nowrap; */
+    /* word-break: break-all; */
+    
+    
+    color: #555;
+    font-size: 11px;
+    padding-left: 16px;
+    /* position: relative; */
+
+    width: 32%;
+    min-width: 160px;
+    height: 30px;
+
+    background-color: lightcyan;
+}
+
+.form-row input {
+    width: 100%;
+    height: 30px;
+    padding: 1px 8px;
+    font-size: 13px;
+    border: 1px solid #d9d9d9;
+    border-radius: 1px;
+}
+
+.examples {
+    font-family: monospace;
+    font-size: 11px;
+    color: #667;
+    white-space: collapse;
+    text-wrap: wrap;
+}
