--- a/styles.css
+++ b/styles.css
@@ -288,6 +288,12 @@ button {
     /* background-color: lightcyan; */
 }
 
+@media (max-width: 1057px) {
+    .form-col-3 {
+        visibility: hidden;
+    }
+}
+ 
 .form-col-3-td {
     display: table-cell;
     vertical-align: middle;
@@ -308,4 +314,10 @@ button {
     font-size: 13px;
     border: 1px solid #d9d9d9;
     border-radius: 1px;
+    outline: none;
+}
+
+.form-row input:focus {
+    border: 1px solid blue;
+    box-shadow: inset 0 1.5px 1px 1px lightgrey;
 }
