--- a/styles.css
+++ b/styles.css
@@ -5,6 +5,7 @@
 body {
     font-family: Arial, sans-serif;
     /* margin: 10px; */
+    /* background-color: grey; */
 }
 
 #top-container { 
@@ -12,6 +13,7 @@ body {
     margin: 15px;
     margin-bottom: 20px;
     font-size: 14px;
+    /* background-color: #ebebeb; */
 }
 
 table, td {
@@ -169,6 +171,7 @@ button {
 
 .page {
     margin: auto;
+    /* background-color:#ebebeb; */
 }
 
 .header {
@@ -217,12 +220,16 @@ button {
 }
 
 .sub-header p {
-    position: relative;
-    top: 25px;
-    left: 45px;
+    /* position: relative; */
+    margin-top: 0;
+    padding-top: 25px;
+    padding-left: 45px;
     font-size: 20px;
     color: #d93025;
-    margin: 0;
+    /* margin-top: 0;
+    margin-left: 0; */
+    width: 100%;
+    /* background-color: aqua; */
 }
 
 .separator  {
@@ -234,6 +241,7 @@ button {
     min-width: 200px;
     margin-top: 40px;
     margin-left: 45px;
+    /* background-color: aquamarine; */
 }
 
 .form-row {
