--- a/styles.css
+++ b/styles.css
@@ -277,6 +277,7 @@ button {
 }
 
 .form-col-2 {
+    position: relative;
     min-width: 167px;
     width: 50%;
     /* background-color: cornflowerblue; */
@@ -328,4 +329,33 @@ button {
 .form-row input:focus {
     border: 1px solid blue;
     box-shadow: inset 0 1.5px 1px 1px lightgrey;
+}
+
+#advanced-search-button {
+    position: absolute;
+    right: 0;
+    width: 120px;
+    height: 30px;
+    color: #fff;
+    background-color: #4d90fe;
+    font-weight: bold;
+    font-size: 11px;
+    border: 1px solid #3079ed;
+    border-radius: 2px;
+    text-align: center;
+    background-image: -moz-linear-gradient(top,#4d90fe,#4787ed);
+}
+
+#advanced-search-button:hover {
+    background-color: #4787ed;
+    background-image: none;
+}
+
+#advanced-search-button:focus {
+    /* background-color: white; */
+    /* outline: auto;
+    outline-style: inset;
+    outline-width: 3px;
+    outline-color: white; */
+    box-shadow: inset 1px 1px 0px white, inset -1px -1px 0px white
 }
