advanced search ready

--- a/styles.css
+++ b/styles.css
@@ -241,6 +241,7 @@ button {
     min-width: 200px;
     margin-top: 40px;
     margin-left: 45px;
+    margin-bottom: 30px;
     /* background-color: aquamarine; */
 }
 
